--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Git Kraken</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus officiis voluptates assumenda, nam eligendi vel voluptatem ratione sunt. Velit exercitationem at eligendi ab beatae recusandae, natus modi nam sed dolor.</p>
 </body>
 </html>
